IC-Prod/objects/Change_Request__c.object
<CustomObject>
    <description>Change Request object.</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>Actual Completion Date</description>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Business_Lead__c</fullName>
        <label>Approval Business Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Contact_Center__c</fullName>
        <description>Contact Center Approval dropdown menu.
Mike Monson.</description>
        <label>Approval Contact Center</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need more info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Corporate_Accounts__c</fullName>
        <description>Options for approving Change Requests by Corporate Accounts.</description>
        <label>Approval Corporate Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Learning_Services__c</fullName>
        <label>Approval Learning Services</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Marketing_Support__c</fullName>
        <label>Approval Marketing Support</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_NCR__c</fullName>
        <label>Approval NCR</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_NER__c</fullName>
        <label>Approval NER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Project_Sponsors__c</fullName>
        <label>Approval Project Sponsors</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_SCR__c</fullName>
        <label>Approval SCR</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_SER__c</fullName>
        <label>Approval SER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_WER__c</fullName>
        <label>Approval WER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approvals__c</fullName>
        <formula>IF(  ISPICKVAL(Approval_Business_Lead__c, &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Marketing_Support__c , &quot;Approve&quot;), 1,0)  + IF(  ISPICKVAL( Approval_Learning_Services__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_NCR__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_NER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Project_Sponsors__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_SCR__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_SER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_WER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Contact_Center__c , &quot;Approve&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign Change Request for Deployment.</description>
        <label>Deployment Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001RTtIEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Bonnie Briant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Feldtman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eva DeLorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maria Fitzsimons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila McEvoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signe Einess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration - Shashank Makhija</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management - Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security - David Williamson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Measure__c</fullName>
        <description>BENEFIT MEASUREMENT: Define how we will measure the benefit of the solution.</description>
        <label>Benefit Measure</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_of_Proposed_Solution__c</fullName>
        <description>BENEFITS OF PROPOSED SOLUTION: Clearly and concisely list benefits statements for your proposed solution. Include productivity gains where applicable, as well as potential for increased revenue. Reference the tangible (hard dollar) and intangible (soft dollar) savings, and where possible, reference the business drivers associated with these statements.</description>
        <label>Benefits of Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <label>Business Drivers</label>
        <picklist>
            <picklistValues>
                <fullName>Optimization of Internal Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Growth/Margin Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Describe in text field)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Opportunity_or_Problem__c</fullName>
        <description>Clearly and concisely describe the business opportunity at hand or the business problem you are trying to solve. Depending on complexity, you may choose to organize your statement into paragraphs labeled: Background, Current Process Overview, Problems Identified, and/or Opportunity.</description>
        <label>Business Opportunity or Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Reason for cancelling the request</description>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Champ_Discussion__c</fullName>
        <description>Date of Champions Discussion Meeting</description>
        <label>Champ Discussion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Request_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending I.S. Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending L.S. Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <description>Date the change was deployed</description>
        <label>Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>Estimated Completion Date</description>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval__c</fullName>
        <description>Date Change Request is approved by Laine deJong</description>
        <label>Final Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_S_Cost_Estimate_Required__c</fullName>
        <label>I.S. Cost Estimate Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_S_Cost_Estimate__c</fullName>
        <label>I.S. Cost Estimate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L_S_Cost_Estimate_Required__c</fullName>
        <label>L.S. Cost Estimate Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L_S_Cost_Estimate__c</fullName>
        <label>L.S. Cost Estimate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <description>PROPOSED SOLUTION: Clearly and concisely, describe the solution you are proposing to address the business opportunity at hand or the business problem. Specify proposed changes to business processes and, if required, to technology application systems or infrastructure. INCLUDE AN EXPLANATION OF THE IMPACT OF DOING NOTHING.</description>
        <label>Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedy_CRQ__c</fullName>
        <inlineHelpText>Numeric portion of the Remedy  Change Request  (&quot;CRQ&quot;) number corresponding to this change.  All changes must be entered as CRQ tickets in Remedy before closing in SFDC.</inlineHelpText>
        <label>Remedy CRQ #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worklog__c</fullName>
        <description>Worklog, 32,000 characters</description>
        <label>Worklog</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Change_Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Final_Approval__c</columns>
        <columns>Deployment__c</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenChangeRequests</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Champ_Discussion__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedAwaitingAssignment</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approval_Project_Sponsors__c</field>
            <operation>equals</operation>
            <value>Approve</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>Approved Awaiting Assignment</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Final_Approval__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Proposed_Solution__c</columns>
        <columns>Benefits_of_Proposed_Solution__c</columns>
        <columns>Business_Opportunity_or_Problem__c</columns>
        <columns>Priority__c</columns>
        <columns>Other_Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Approved Last Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedbyAll</fullName>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval__c</columns>
        <columns>Deployment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approvals__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>Approved by All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedbySponsorsNotDeployed</fullName>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Final_Approval__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Priority__c</columns>
        <columns>Remedy_CRQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Project_Sponsors__c</field>
            <operation>equals</operation>
            <value>Approve</value>
        </filters>
        <filters>
            <field>Deployment__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,On Hold</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Approved by Sponsors/Not Deployed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedbysponsorsmissingApprovalDt</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Approval_Project_Sponsors__c</field>
            <operation>equals</operation>
            <value>Approve</value>
        </filters>
        <label>Approved by sponsors/missing Approval Dt</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AssignedtoBusinessLead</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Brian Feldtman</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>notContain</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Assigned to Business Lead</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingBusinessLead</fullName>
        <columns>NAME</columns>
        <columns>Approval_Business_Lead__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Business_Lead__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting Business Lead</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingContactCenterApproval</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Contact_Center__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Contact_Center__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting Contact Center Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingFinalApproval</fullName>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Approval_Project_Sponsors__c</columns>
        <columns>Final_Approval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Project_Sponsors__c</field>
            <operation>notContain</operation>
            <value>Approve</value>
        </filters>
        <filters>
            <field>Deployment__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>contains</operation>
            <value>Open,Assigned</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>*Awaiting Final Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingLearningServices</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Learning_Services__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Learning_Services__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting Learning Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingMarketingSupportApproval</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Marketing_Support__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Marketing_Support__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting Marketing Support Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingNCR</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_NCR__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_NCR__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting NCR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AwaitingNER</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_NER__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_NER__c</field>
            <operation>notEqual</operation>
            <value>Reject,Approve</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Final_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting NER</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Change Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cancellation_Reason</fullName>
        <active>true</active>
        <description>If status is cancelled, then they need to enter a reason.</description>
        <errorConditionFormula>AND( Cancellation_Reason__c  = &quot;&quot;, ISPICKVAL( Change_Request_Status__c , &quot;Cancelled&quot;))</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please enter the reason you are cancelling this Change Request.  If you did not intend to cancel this request, then update the status to a different value and remove the cancellation reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Requires_CHG</fullName>
        <active>true</active>
        <description>All completed CRs require a Remedy CHG # to be entered.</description>
        <errorConditionFormula>AND(ISPICKVAL( Change_Request_Status__c , &quot;Completed&quot;),  TRIM(Remedy_CRQ__c)  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Remedy_CRQ__c</errorDisplayField>
        <errorMessage>A Remedy CHG # is required on all Completed changes.  If you have not already created the Remedy CHG ticket for this change, please do so, then come back and enter the CHG number here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Requires_Date</fullName>
        <active>true</active>
        <description>All completed CRs require Actual Completion Date</description>
        <errorConditionFormula>AND(ISPICKVAL( Change_Request_Status__c , &quot;Completed&quot;),   ISBLANK(Actual_Completion_Date__c ))</errorConditionFormula>
        <errorDisplayField>Actual_Completion_Date__c</errorDisplayField>
        <errorMessage>Actual Completion Date is required on all Completed requests.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_and_Deployed</fullName>
        <active>true</active>
        <description>If status is completed, then deployment date must be entered - and vice versa</description>
        <errorConditionFormula>AND( NOT( ISNULL( Deployment__c )),NOT(ISPICKVAL( Change_Request_Status__c , &quot;Completed&quot;)))</errorConditionFormula>
        <errorDisplayField>Change_Request_Status__c</errorDisplayField>
        <errorMessage>If Deployment Date has been entered, then status must be Completed.  If this Change Request is not actually completed, please do not enter a deployment date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Assigned_To</fullName>
        <active>true</active>
        <description>Require an assignee if the status is &apos;Assigned&apos; or &apos; In Development&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(Assigned_To__c, &quot;&quot;), OR(ISPICKVAL(Change_Request_Status__c , &quot;Assigned&quot;),ISPICKVAL(Change_Request_Status__c , &quot;In Development&quot;)))</errorConditionFormula>
        <errorDisplayField>Assigned_To__c</errorDisplayField>
        <errorMessage>Change Request must be assigned if status is &apos;Assigned&apos; or &apos;In Development&apos;</errorMessage>
    </validationRules>
</CustomObject>